[UPDATE] Cambiar nombre al proyecto